fix: text-align in row2-3

--- a/style.css
+++ b/style.css
@@ -218,8 +218,14 @@ header {
     MAIN
 -------------------*/
 
-.row-1 h2, .row-1 p{
+.row-1 h2, .row-1 p {
     text-align: left;
+}
+.row-3 h2, .row-3 p {
+    text-align: left;
+}
+.row-2 h2, .row-2 p {
+    text-align: right;
 }
 
 .col-text {
